--- a/package.json
+++ b/package.json
@@ -23,18 +23,11 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/event-emitter": "github:nestjs/event-emitter",
     "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/swagger": "github:nestjs/swagger",
-    "@nestjs/typeorm": "^10.0.2",
-    "helmet": "^7.1.0",
-    "mysql2": "^3.11.3",
     "nestjs-i18n": "^10.4.9",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
-    "swagger-ui-express": "^5.0.1",
-    "typeorm": "^0.3.20"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
